Fix entries alignment in the indico weeks view

--- a/indico/htdocs/sass/themes/weeks.scss
+++ b/indico/htdocs/sass/themes/weeks.scss
@@ -92,6 +92,7 @@
     height: 18px;
     position: relative;
     border-top: solid 1px #f9f9f9;
+    box-sizing: border-box;
 }
 
 .week-timetable .row .title {
